# prj_fst_5

./: alembic.ini  pyproject.toml
migrations/: env.py
migrations/versions/: 7f8ef306801c_rename_blog_to_post.py  eeba75813f89_initial.py
src/: database.py  main.py
src/blog/: models.py  router.py  schemas.py
src/post/: models.py  router.py  schemas.py
